added authentication for admihn

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,5 @@ CLOUDINARY_API_KEY = "552279975899588"
 CLOUDINARY_SECRET_KEY = "VGBAH_6U0qx3LhqaEtU4_xFsbBM"
 CLOUDINARY_NAME = "dfipw8gda"
 JWT_SECRET= "VistaClothes"
+ADMIN_EMAIL="admin@gmail.com"
+ADMIN_PASSWORD="admin"
